<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>

    <!-- MAIN ACTIVITY -->
    <string name="description_back_button">Back</string>
    <string name="header_main">Playlist maker</string>
    <string name="button_library">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="button_search">Поиск</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="YP_android_developer_link">https://practicum.yandex.ru/android-developer</string>
    <string name="write_to_user_support">Написать в поддержку</string>
    <string name="support_email">HUEY.news@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам за крутое приложение!</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <!-- SEARCH ACTIVITY -->
    <string name="search_screen_title">Поиск</string>
    <string name="search_field_hint">Поиск</string>
    <string name="back_button_description">Назад</string>
    <string name="placeholder_error">Проблемы со связью\n\nЗагрузка не удалась\n</string>
    <string name="placeholder_empty_error">Ничего не нашлось</string>
    <string name="placeholder_internet_error">Проверьте подключение к интернету</string>
    <string name="placeholder_server_error">Ошибка сервера</string>
    <string name="placeholder_button">Обновить</string>
    <string name="search_history_header">Вы искали</string>
    <string name="search_history_button">Очистить историю</string>

    <!-- PLAYER TRACK INFO -->
    <string name="track_info_duration_title">Длительность</string>
    <string name="track_info_album_title">Альбом</string>
    <string name="track_info_year_title">Год</string>
    <string name="track_info_genre_title">Жанр</string>
    <string name="track_info_country_title">Страна</string>

    <!-- LIBRARY -->
    <string name="empty_favourite_placeholder">Ваша медиатека пуста</string>
    <string name="empty_playlist_placeholder">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="favourite_tab">Избранные треки</string>
    <string name="playlist_tab">Плейлисты</string>

</resources>