<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:theme="@style/Base.Theme.PlaylistMaker.PlayerActivity"
    android:background="?attr/primaryBackgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <!-- BORDERS -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/border_left_16"
        style="@style/Player.Border"
        app:layout_constraintGuide_begin="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/border_right_16"
        style="@style/Player.Border"
        app:layout_constraintGuide_end="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/border_left_24"
        style="@style/Player.Border"
        app:layout_constraintGuide_begin="24dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/border_right_24"
        style="@style/Player.Border"
        app:layout_constraintGuide_end="24dp" />


    <!-- BUTTON BACK -->
    <ImageButton
        android:id="@+id/button_back"
        style="@style/style_button_back"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/border_left_16"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- TRACK HEADER -->
    <ImageView
        android:id="@+id/image_view_artwork_512"
        style="@style/Player.Artwork"
        app:layout_constraintEnd_toStartOf="@id/border_right_24"
        app:layout_constraintStart_toEndOf="@id/border_left_24"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@id/text_view_track_name"
        android:layout_marginBottom="24dp" />
    <TextView
        android:id="@+id/text_view_track_name"
        style="@style/Player.Name.TrackName"
        app:layout_constraintEnd_toStartOf="@id/border_right_24"
        app:layout_constraintStart_toEndOf="@id/border_left_24"
        app:layout_constraintBottom_toTopOf="@id/text_view_artist_name"
        android:layout_marginBottom="12dp"
        tools:text="Yesterday (Remastered 2009)" />
    <TextView
        android:id="@+id/text_view_artist_name"
        style="@style/Player.Name.ArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/border_right_24"
        app:layout_constraintStart_toEndOf="@id/border_left_24"
        app:layout_constraintBottom_toTopOf="@id/button_play_pause"
        android:layout_marginBottom="24dp"
        tools:text="The Beatles" />


    <!-- ACTION BUTTONS -->
    <ImageButton
        android:id="@+id/button_play_pause"
        style="@style/Player.Button.PlayPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_track_time"
        android:layout_marginBottom="4dp"/>
    <ImageButton
        android:id="@+id/button_add"
        style="@style/Player.Button.Add"
        app:layout_constraintBottom_toBottomOf="@id/button_play_pause"
        app:layout_constraintStart_toEndOf="@id/border_left_24"
        app:layout_constraintTop_toTopOf="@id/button_play_pause" />
    <ImageButton
        android:id="@+id/button_favorite"
        style="@style/Player.Button.Favorite"
        app:layout_constraintBottom_toBottomOf="@id/button_play_pause"
        app:layout_constraintEnd_toStartOf="@id/border_right_24"
        app:layout_constraintTop_toTopOf="@id/button_play_pause" />
    <TextView
        android:id="@+id/text_view_track_time"
        style="@style/Player.Name.TrackTime"
        app:layout_constraintEnd_toEndOf="@id/button_play_pause"
        app:layout_constraintStart_toStartOf="@id/button_play_pause"
        app:layout_constraintBottom_toTopOf="@id/text_view_track_info_duration_title"
        android:layout_marginBottom="24dp"
        tools:text="0:30" />


    <!-- TRACK INFO TITLE -->
    <TextView
        android:id="@+id/text_view_track_info_duration_title"
        style="@style/Player.Name.TrackInfoTitle"
        android:text="@string/track_info_duration_title"
        app:layout_constraintBottom_toTopOf="@+id/text_view_track_info_album_title"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/border_left_16" />
    <TextView
        android:id="@+id/text_view_track_info_album_title"
        style="@style/Player.Name.TrackInfoTitle"
        android:text="@string/track_info_album_title"
        app:layout_constraintBottom_toTopOf="@+id/text_view_track_info_year_title"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/border_left_16" />
    <TextView
        android:id="@+id/text_view_track_info_year_title"
        style="@style/Player.Name.TrackInfoTitle"
        android:text="@string/track_info_year_title"
        app:layout_constraintBottom_toTopOf="@+id/text_view_track_info_genre_title"
        android:layout_marginBottom="16dp"
        app:layout_goneMarginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/border_left_16" />
    <TextView
        android:id="@+id/text_view_track_info_genre_title"
        style="@style/Player.Name.TrackInfoTitle"
        android:text="@string/track_info_genre_title"
        app:layout_constraintBottom_toTopOf="@+id/text_view_track_info_country_title"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/border_left_16" />
    <TextView
        android:id="@+id/text_view_track_info_country_title"
        style="@style/Player.Name.TrackInfoTitle"
        android:text="@string/track_info_country_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toEndOf="@id/border_left_16" />


    <!-- TRACK INFO CONTENT -->
    <TextView
        android:id="@+id/text_view_track_info_duration_content"
        style="@style/Player.Name.TrackInfoContent"
        tools:text="5:35"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_track_info_duration_title"
        app:layout_constraintEnd_toEndOf="@id/border_right_16" />
    <TextView
        android:id="@+id/text_view_track_info_album_content"
        style="@style/Player.Name.TrackInfoContent"
        tools:text="Yesterday (Remastered 2009)"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_track_info_album_title"
        app:layout_constraintEnd_toEndOf="@id/border_right_16" />
    <TextView
        android:id="@+id/text_view_track_info_year_content"
        style="@style/Player.Name.TrackInfoContent"
        tools:text="1965"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_track_info_year_title"
        app:layout_constraintEnd_toEndOf="@id/border_right_16" />
    <TextView
        android:id="@+id/text_view_track_info_genre_content"
        style="@style/Player.Name.TrackInfoContent"
        tools:text="Rock"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_track_info_genre_title"
        app:layout_constraintEnd_toEndOf="@id/border_right_16" />
    <TextView
        android:id="@+id/text_view_track_info_country_content"
        style="@style/Player.Name.TrackInfoContent"
        tools:text="Великобритания"
        app:layout_constraintBaseline_toBaselineOf="@id/text_view_track_info_country_title"
        app:layout_constraintEnd_toEndOf="@id/border_right_16" />


</androidx.constraintlayout.widget.ConstraintLayout>